--- a/src/sample.html
+++ b/src/sample.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src="js/jquery.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="css/metro-select.css" >
         <script src="js/metro-select.js"></script>
         <style type="text/css">
             .sel-opt {
