--- a/sample.html
+++ b/sample.html
@@ -1,21 +1,21 @@
 <html>
     <head>
-        <script src="js/jquery.js" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" href="css/metro-select.css" >
-        <script src="js/metro-select.js"></script>
-        <style type="text/css">
-            .sel-opt {
-                margin-right: 5px;
-            }
-        </style>
+        <script src="lib/jquery/dist/jquery.js" type="text/javascript"></script>
+        <script src="lib/jss/jss.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="metro-select.css" >
+        <script src="metro-select.js"></script>
     </head>
     <body>
-        <select id="select-box">
+        <select id="select-box" selectedIndex="0">
             <option>celcius</option>
             <option>fahrenheit</option>
         </select>
         <script type="text/javascript">
-            $("select").metroSelect();
+            $("select").metroSelect({
+                onchange: function(a) {
+                    console.log(a);
+                }
+            });
         </script>
     </body>
 </html>
