--- a/sample.html
+++ b/sample.html
@@ -4,6 +4,11 @@
         <script src="lib/jss/jss.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="metro-select.css" >
         <script src="metro-select.js"></script>
+        <style type="text/css">
+            .sel-opt {
+                margin-right: 5px;
+            }
+        </style>
     </head>
     <body>
         <select id="select-box" selectedIndex="0">
