Add back class support with test

--- a/sample.html
+++ b/sample.html
@@ -7,13 +7,16 @@
             .ms-opt {
                 margin-right: 5px;
             }
+            .sample_class {
+                font-weight: bold;
+            }
         </style>
     </head>
     <body>
         <div>
         <select id="select-box">
             <option>celcius</option>
-            <option>fahrenheit</option>
+            <option class="sample_class">fahrenheit</option>
         </select>
 </div>
 <div>
