--- a/sample.html
+++ b/sample.html
@@ -1,38 +1,49 @@
 <html>
-    <head>
-        <script src="node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
-        <script src="node_modules/jss/jss.js" type="text/javascript"></script>
-        <script src="metro-select.js"></script>
-        <style type="text/css">
-            .ms-opt {
-                margin-right: 5px;
-            }
-            .sample_class {
-                font-weight: bold;
-            }
-        </style>
-    </head>
-    <body>
-        <div>
+<head>
+    <script src="node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="node_modules/jss/jss.js" type="text/javascript"></script>
+    <script src="metro-select.js"></script>
+    <style type="text/css">
+        .ms-opt {
+            margin-right: 5px;
+        }
+
+        .sample_class {
+            font-weight: bold;
+        }
+    </style>
+</head>
+
+<body>
+    <div>
         <select id="select-box">
             <option>celcius</option>
             <option class="sample_class">fahrenheit</option>
         </select>
-</div>
-<div>
+    </div>
+    <div>
         <select id="mySelect">
             <option>celcius</option>
             <option>fahrenheit</option>
         </select>
-        </div>
-        <script type="text/javascript">
-            $("#select-box").metroSelect({
-                initial: 'fahrenheit',
-                option_class: 'ms-opt',
-                onchange: function(a) {
-                    console.log(a);
-                }
-            });
-        </script>
-    </body>
+
+    </div>
+    <div>
+        <button id="set-active">Set celcius active</button>
+    </div>
+
+    <script type="text/javascript">
+        $("#select-box").metroSelect({
+            initial: 'fahrenheit',
+            option_class: 'ms-opt',
+            onchange: function (a) {
+                console.log(a);
+            }
+        });
+
+        $("#set-active").on('click', function () {
+            $("#select-box").metroSelect().set_active('celcius');
+        });
+    </script>
+</body>
 </html>
