onvisibilitychange should return bool

--- a/sample.html
+++ b/sample.html
@@ -46,7 +46,8 @@
                 console.log("a", a);
             },
             onvisibilitychange: function(a, b) {
-                console.log("a", a, "b", b)
+                console.log("a", a, "b", b);
+                return a == 'kelvin';
             }
         });
 
