--- a/sample.html
+++ b/sample.html
@@ -45,9 +45,9 @@
             onchange: function (a) {
                 console.log("a", a);
             },
-            onvisibilitychange: function(a, b) {
+            onvisibilitychange: function(a, b, cb) {
                 console.log("a", a, "b", b);
-                return a == 'kelvin';
+                cb(a == 'kelvin');
             }
         });
 
