Style the inside of buttons
Fix(?) the add/remove buttons...

--- a/sample.html
+++ b/sample.html
@@ -10,7 +10,7 @@
         }
 
         .sample_class {
-            font-weight: bold;
+            font-style: italic;
         }
 
         .green {
@@ -20,7 +20,7 @@
             color: blue;
         }
         .removed {
-            color: pink;
+            color: green;
         }
     </style>
 </head>
